--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/tarasyarema/tmb/issues"
   },
-  "homepage": "https://github.com/tarasyarema/tmb#readme"
+  "homepage": "https://github.com/tarasyarema/tmb#readme",
+  "dependencies": {
+    "dotenv": "^6.2.0",
+    "express": "^4.16.4",
+    "nedb": "^1.8.0",
+    "request": "^2.88.0"
+  }
 }
