--- a/package.json
+++ b/package.json
@@ -1,25 +1,26 @@
 {
-  "name": "tmb",
-  "version": "1.0.0",
-  "description": "tmb time tables",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/tarasyarema/tmb.git"
-  },
-  "author": "@tarasyarema",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/tarasyarema/tmb/issues"
-  },
-  "homepage": "https://github.com/tarasyarema/tmb#readme",
-  "dependencies": {
-    "dotenv": "^6.2.0",
-    "express": "^4.16.4",
-    "nedb": "^1.8.0",
-    "request": "^2.88.0"
-  }
+    "name": "tmb",
+    "version": "1.0.0",
+    "description": "TMB Personal Time Tables",
+    "main": "server.js",
+    "scripts": {
+        "start": "node server.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/tarasyarema/tmb.git"
+    },
+    "author": "@tarasyarema",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/tarasyarema/tmb/issues"
+    },
+    "homepage": "https://github.com/tarasyarema/tmb#readme",
+    "dependencies": {
+        "dotenv": "^6.2.0",
+        "express": "^4.16.4",
+        "nedb": "^1.8.0",
+        "request": "^2.88.0"
+    }
 }
