--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,24 @@
+# Project related
 .env
 _tmb_static/
-.vscode/
+
+# VS Code shit I don't need in git
+*.code-workspace
+
+# Go
+  
+# Binaries for programs and plugins
 *.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+
+# Test binary, built with `go test -c`
+*.test
+
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
+
+# Dependency directories (remove the comment below to include it)
+# vendor/
